--- a/src/sass/_partials/_common.sass
+++ b/src/sass/_partials/_common.sass
@@ -33,7 +33,7 @@
         text-align: center
         margin: $gutter*4 0
         h1
-            font-size: 4rem
+            font-size: 5rem
             font-family: $medium-font
         h3
             font-size: 4rem
@@ -91,6 +91,7 @@
     .flex-container
         margin-top: $gutter
     .card
+        flex-basis: 32%
         background-color: $light-color
         display: flex
         flex-direction: column
