--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,6 +9,7 @@
 @import _components/footer
 @import _components/card
 @import _components/button
+@import _components/preloader
 
 @import _partials/common
 
