--- a/src/sass/_common/_base.sass
+++ b/src/sass/_common/_base.sass
@@ -63,9 +63,9 @@ img
     height: 100%
 
 input, textarea
-    padding: 0.5rem
-    border-radius: 4px
-    border: 1px solid $primary-color
+    padding: $gutter/2
+    border-radius: 2px
+    border: 2px solid $primary-color
     resize: vertical
     max-height: 32px
 
