--- a/src/sass/_common/_base.sass
+++ b/src/sass/_common/_base.sass
@@ -3,6 +3,7 @@
 
 html
     min-height: 100%
+    scroll-behavior: smooth
 
 html, body
     font-size: 16px
@@ -80,7 +81,7 @@ button
     background-color: transparent
 
 button, a
-    transition: all linear 0.5s
+    transition: all linear 0.3s
 
 
 .flex-container
