--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -10,6 +10,7 @@
 @import _components/card
 @import _components/button
 @import _components/preloader
+@import _components/checkbox
 
 @import _partials/common
 
