--- a/src/sass/_components/_button.sass
+++ b/src/sass/_components/_button.sass
@@ -1,15 +1,18 @@
 .btn
+    max-width: 300px
     border: 2px solid $primary-color
     text-transform: uppercase
     border-radius: 50px
     padding: $gutter/3 $gutter
     letter-spacing: 2px
+    font-size: 1rem
     &.btn_primary
         color: #fff
         background-color: $primary-color
         &:hover
             background-color: lighten($primary-color, 5%)
             border-color: lighten($primary-color, 5%)
+            box-shadow: 0px 0px 15px -5px $primary-color
     &.btn_secondary
         color: $primary-color
         background-color: transparent
