--- a/src/sass/_components/_card.sass
+++ b/src/sass/_components/_card.sass
@@ -2,3 +2,6 @@
     border: 2px solid $primary-color
     padding: $gutter
     text-align: center
+    .btn
+        margin-left: auto
+        margin-right: auto
